--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend for the Cord Messenger",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --ignore './data/' --exec node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rohan Biswas",
