--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "Backend for the Cord Messenger",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --ignore './data/' --exec node index.js",
+    "start": "nodemon --ignore './data/' --ignore './.git/' --ignore './node_modules/' index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rohan Biswas",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
+    "sha256": "^0.2.0",
+    "socket.io": "^2.3.0",
     "sqlite3": "^4.1.1"
   }
 }
