--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.2",
-    "mongoose": "^5.8.9",
     "sha256": "^0.2.0",
     "socket.io": "^2.3.0",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "uuid": "^3.4.0"
   }
 }
